Refactor enums and DTOs, update model relationships, and remove unused helper class